--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                         <tbody>
                           <tr>
                             <td class="text-center">
-                              <img src="./assets/images/CV/arcgis.png" style="width: 2.5rem;">
+                              <img src="./assets/images/CV/arcgis.png" style="width: 2.5em;">
                             </td>
                             <td>
                               <div>Esri ArcGIS/QGIS</div>
@@ -195,7 +195,7 @@
                           </tr>
                           <tr>
                             <td class="text-center">
-                              <img src="./assets/images/CV/ai.png" style="width: 2.5rem;">
+                              <img src="./assets/images/CV/ai.png" style="width: 2.5em;">
                             </td>
                             <td>
                               <div>Illustrator</div>
@@ -217,7 +217,7 @@
                           </tr>
                           <tr>
                             <td class="text-center">
-                              <img src="./assets/images/CV/Balsamiq.png" style="width: 2.5rem;">
+                              <img src="./assets/images/CV/Balsamiq.png" style="width: 2.5em;">
                             </td>
                             <td>
                               <div>Balsamiq</div>
@@ -239,7 +239,7 @@
                           </tr>
                           <tr>
                             <td class="text-center">
-                              <img src="./assets/images/CV/Sublime.png" style="width: 2.5rem;">
+                              <img src="./assets/images/CV/Sublime.png" style="width: 2.5em;">
                             </td>
                             <td>
                               <div>Sublime</div>
