--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="row">
               <div class="col-lg-4">
                 <div class="card card-profile">
-                  <div class="card-header" style="background-image: url(./assets/images/CV/IMG_3.jpg);"></div>
+                  <div class="card-header" style="background-image: url(./assets/images/CV/IMG_3.JPG);"></div>
                   <div class="card-body text-center">
                     <!-- <img class="card-profile-img" src="demo/faces/male/16.jpg"> -->
                     <p class="mb-3">Learning Become a iOS Developer</p>
@@ -173,7 +173,7 @@
                         <tbody>
                           <tr>
                             <td class="text-center">
-                              <img src="./assets/images/CV/arcgis.png" style="width: 2.5em;">
+                              <img src="./assets/images/CV/ArcGIS.png" style="width: 2.5em;">
                             </td>
                             <td>
                               <div>Esri ArcGIS/QGIS</div>
