--- a/index.html
+++ b/index.html
@@ -112,33 +112,33 @@
               <div class="col-lg-12">
                 <div class="heading">
                   <h4 class="timelineTitle text-uppercase"><b>Programming Experience</b></h4>
-                  <p class="titleDesc">If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $.17 each.</p>
+                  <p class="titleDesc">大學期間修習外系C/C++程式語言課程，並於就業後因工作需求，學習HTML/CSS/JS，工作期間因資料分析，自學SQL語法，並於今年轉職，學習Swift課程。</p>
                 </div>
                 <div class="card">
                   <div class="card-body">
                     <div class="row">
                       <div class="col-md-3 title">
                         <h5>C/C++</h5>
-                        <div class="mx-auto chart-circle chart-circle-md" data-value="0.42" data-thickness="10" data-color="cyan">
-                          <div class="chart-circle-value">42%</div>
+                        <div class="mx-auto chart-circle chart-circle-md" data-value="0.65" data-thickness="10" data-color="cyan">
+                          <div class="chart-circle-value">65%</div>
                         </div>
                       </div>
                       <div class="col-md-3 title">
                         <h5>HTML/CSS/JS</h5>
-                        <div class="mx-auto chart-circle chart-circle-md" data-value="0.42" data-thickness="10" data-color="cyan">
-                          <div class="chart-circle-value">42%</div>
+                        <div class="mx-auto chart-circle chart-circle-md" data-value="0.85" data-thickness="10" data-color="cyan">
+                          <div class="chart-circle-value">85%</div>
                         </div>
                       </div>
                       <div class="col-md-3 title">
                         <h5>SQL</h5>
-                        <div class="mx-auto chart-circle chart-circle-md" data-value="0.42" data-thickness="10" data-color="cyan">
-                          <div class="chart-circle-value">42%</div>
+                        <div class="mx-auto chart-circle chart-circle-md" data-value="0.80" data-thickness="10" data-color="cyan">
+                          <div class="chart-circle-value">80%</div>
                         </div>
                       </div>              
                       <div class="col-md-3 title">
                         <h5>Swift</h5>
-                        <div class="mx-auto chart-circle chart-circle-md" data-value="0.42" data-thickness="10" data-color="cyan">
-                          <div class="chart-circle-value">42%</div>
+                        <div class="mx-auto chart-circle chart-circle-md" data-value="0.70" data-thickness="10" data-color="cyan">
+                          <div class="chart-circle-value">70%</div>
                         </div>
                       </div>
                     </div>
@@ -152,13 +152,13 @@
         <div class="my-3 my-md-5">
           <div class="container" style="margin-top: 6em;">
             <div class="row row-cards row-deck">
-              <div class="col-4">
+              <div class="col-md-4">
                 <div class="headingSide">
                   <h4 class="timelineTitle text-uppercase"><b>Application Software</b></h4>
-                  <p class="titleDesc">If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $.17 each.</p>
+                  <p class="titleDesc">大學期間學習空間分析ArcGIS/QGIS軟體，並因課程地圖繪圖需求，學習Illustrator，工作後使用Balsamiq作為Wireframe內部討論軟體。</p>
                 </div>
               </div>
-              <div class="col-8">
+              <div class="col-md-8">
                 <div class="card">
                   <div class="card-body">
                     <div class="table-responsive">
@@ -173,7 +173,7 @@
                         <tbody>
                           <tr>
                             <td class="text-center">
-                              <img src="./assets/images/CV/ArcGIS.png" style="width: 2.5em;">
+                              <img src="./assets/images/CV/ArcGIS.png" style="width:40px;">
                             </td>
                             <td>
                               <div>Esri ArcGIS/QGIS</div>
@@ -184,18 +184,17 @@
                                   <strong>90%</strong>
                                 </div>
                                 <div class="float-right">
-                                  <small class="text-muted">Jun 11, 2015 - Present</small>
+                                  <!-- <small class="text-muted">Jun 11, 2015 - Present</small> -->
                                 </div>
                               </div>
                               <div class="progress progress-xs">
-                                <div class="progress-bar bg-indigo" role="progressbar" style="width: 90%"
-                   aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar bg-indigo" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                               </div>
                             </td>
                           </tr>
                           <tr>
                             <td class="text-center">
-                              <img src="./assets/images/CV/ai.png" style="width: 2.5em;">
+                              <img src="./assets/images/CV/ai.png" style="width: 40px;">
                             </td>
                             <td>
                               <div>Illustrator</div>
@@ -206,18 +205,17 @@
                                   <strong>80%</strong>
                                 </div>
                                 <div class="float-right">
-                                  <small class="text-muted">Jun 11, 2015 - Present</small>
+                                  <!-- <small class="text-muted">Jun 11, 2015 - Present</small> -->
                                 </div>
                               </div>
                               <div class="progress progress-xs">
-                                <div class="progress-bar bg-indigo" role="progressbar" style="width: 90%"
-                   aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar bg-indigo" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                               </div>
                             </td>
                           </tr>
                           <tr>
                             <td class="text-center">
-                              <img src="./assets/images/CV/Balsamiq.png" style="width: 2.5em;">
+                              <img src="./assets/images/CV/Balsamiq.png" style="width: 40px;">
                             </td>
                             <td>
                               <div>Balsamiq</div>
@@ -228,18 +226,17 @@
                                   <strong>75%</strong>
                                 </div>
                                 <div class="float-right">
-                                  <small class="text-muted">Jun 11, 2015 - Present</small>
+                                  <!-- <small class="text-muted">Jun 11, 2015 - Present</small> -->
                                 </div>
                               </div>
                               <div class="progress progress-xs">
-                                <div class="progress-bar bg-indigo" role="progressbar" style="width: 90%"
-                   aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar bg-indigo" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                               </div>
                             </td>
                           </tr>
                           <tr>
                             <td class="text-center">
-                              <img src="./assets/images/CV/Sublime.png" style="width: 2.5em;">
+                              <img src="./assets/images/CV/Sublime.png" style="width: 40px;">
                             </td>
                             <td>
                               <div>Sublime</div>
@@ -250,12 +247,11 @@
                                   <strong>80%</strong>
                                 </div>
                                 <div class="float-right">
-                                  <small class="text-muted">Jun 11, 2015 - Present</small>
+                                  <!-- <small class="text-muted">Jun 11, 2015 - Present</small> -->
                                 </div>
                               </div>
                               <div class="progress progress-xs">
-                                <div class="progress-bar bg-indigo" role="progressbar" style="width: 90%"
-                   aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar bg-indigo" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                               </div>
                             </td>
                           </tr>
@@ -284,7 +280,7 @@
                       <b>March 2019 - April 2019</b>
                       <h2>彼得潘的iOS App程式設計入門</h2>
                       <div class="timeline-content-info"></div>
-                      <p>作為</p>
+                      <p>規劃轉職後，即報名彼得潘Swift入門課程，使我快速iOS開發掌握基礎能力，並持續搭配iOS 12 App程式開發實務心法、iOS 12 App程式設計進階攻略學習中。</p>
                     </div>
                   </div>
                   <div class="cd-timeline-block">
@@ -294,7 +290,7 @@
                       <b>July 2016</b>
                       <h2>嫁給 RD 的 UI Designer - UI 設計師入門</h2>
                       <div class="timeline-content-info"></div>
-                      <p>學習到UI設計理論、資訊架構學、Flow Chart/UI Flow、Wireframe/Mockup/Prorotype等產出規格、交接分工。</p>
+                      <p>學習到UI設計理論、資訊架構學、Flow Chart/UI Flow、Wireframe/Mockup/Prorotype等產出規格，各職務之工作交接與分工。</p>
                     </div>
                   </div>
                   <div class="cd-timeline-block">
@@ -303,7 +299,7 @@
                       <b>July 2015 - August 2015</b>
                       <h2>台大資訊系統訓練班 - 網頁設計基礎</h2>
                       <div class="timeline-content-info"></div>
-                      <p>為解決工作中版面開發問題，學習基礎網頁開發技能包含：HTML5,CSS3,jQuery,Bootstrap等。之後專案網頁介面撰寫。</p>
+                      <p>為解決工作中版面開發問題，學習基礎網頁開發技能包含：HTML5,CSS3,jQuery,Bootstrap等，在此之後專案網頁介面多自行撰寫。</p>
                     </div>
                   </div>
                   <div class="cd-timeline-block">
