--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
                       </div>
                       <div class="col-md-3 title">
                         <h5>SQL</h5>
-                        <div class="mx-auto chart-circle chart-circle-md" data-value="0.80" data-thickness="10" data-color="cyan">
-                          <div class="chart-circle-value">80%</div>
+                        <div class="mx-auto chart-circle chart-circle-md" data-value="0.75" data-thickness="10" data-color="cyan">
+                          <div class="chart-circle-value">75%</div>
                         </div>
                       </div>              
                       <div class="col-md-3 title">
@@ -209,7 +209,7 @@
                                 </div>
                               </div>
                               <div class="progress progress-xs">
-                                <div class="progress-bar bg-indigo" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar bg-indigo" role="progressbar" style="width: 90%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                               </div>
                             </td>
                           </tr>
@@ -223,14 +223,14 @@
                             <td>
                               <div class="clearfix">
                                 <div class="float-left">
-                                  <strong>75%</strong>
+                                  <strong>85%</strong>
                                 </div>
                                 <div class="float-right">
                                   <!-- <small class="text-muted">Jun 11, 2015 - Present</small> -->
                                 </div>
                               </div>
                               <div class="progress progress-xs">
-                                <div class="progress-bar bg-indigo" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar bg-indigo" role="progressbar" style="width: 90%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                               </div>
                             </td>
                           </tr>
@@ -308,8 +308,8 @@
                       <b>July 2014 - January 2019</b>
                       <h2>宸訊科技股份有限公司</h2>
                       <div class="timeline-content-info"></div>
-                      <p>以手機GPS與相機功能，約100位工作人員參與，耗費約4個月約時間，完成蒐集全雲林70萬張相片、8萬公頃(約96個足球場)農地作物調查資訊。</p>
-                      <p>蒐集全台超過3000台裝置PM2.5數據，結合風場、污染源等分析，以網頁動態展示三日內任一時間共約430筆感測資料。</p>
+                      <p>以手機GPS與相機功能，約100位工作人員參與，耗費約4個月約時間，完成蒐集全雲林70萬張相片、8萬公頃(約等於2.5個台北市面積)農地作物調查資訊。</p>
+                      <p>蒐集全台超過3000台裝置PM2.5數據，結合風場、污染源等分析，以網頁動態展示三日內任一時間共約430萬筆感測資料。</p>
                     </div>
                   </div>
                   <div class="cd-timeline-block">
