--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <h4>Hello! I'm</h4>
                     <h1>Pony Chang</h1>
                     <p>過去五年，我任職於地理資訊系統(GIS)領域之政府專案公司，擔任專案經理/GIS分析師職務。在職期間完成22個中大型以上之專案(專案成果包含網站、
-                    iOS/Android APP)，專案領域含跨農業、環境、生態、核能、樂齡生活等多元領域，工作期間使我累積許多領域知識。</p>
+                    iOS/Android APP)，專案領域含跨農業、環境、生態、核能、樂齡生活等，工作期間使我累積許多領域知識。</p>
                     <p>工作內容除了需求分析與專案管理等行政工作外，因為自己對於資訊領域充滿興趣，執行專案的過程中，透過自學/進修相關程式語言課程，並親自參與系統架構、前端網頁、API、Database規劃設計並攥寫規格，再與工程師討論合理性，遇到技術問題追根究柢的求知精神。這樣的工作模式，使我更加了解資訊系統之概念與技術架構。討論過程中，也讓我逐步地發覺，自己對於程式撰寫的嚮往。</p>
                     <p>當前的目標，希望能轉職成為一名優秀的iOS Developer，並逐步增進專業技能。結合過去專案執行經驗，達到良好的團隊合作能力、更具計畫性工作模式、思考更貼近使用者需求與完善的操作體驗。工作之餘，我喜歡以背包客身份旅遊，使旅遊融入生活中，以攝影留下永恆的記憶，並視家人為我最重要的資產。Sometimes what you can do with your family is more important than what you can do for them.</p/>
                   </div>
@@ -251,7 +251,7 @@
                                 </div>
                               </div>
                               <div class="progress progress-xs">
-                                <div class="progress-bar bg-indigo" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar bg-indigo" role="progressbar" style="width: 90%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                               </div>
                             </td>
                           </tr>
@@ -308,8 +308,9 @@
                       <b>July 2014 - January 2019</b>
                       <h2>宸訊科技股份有限公司</h2>
                       <div class="timeline-content-info"></div>
-                      <p>以手機GPS與相機功能，約100位工作人員參與，耗費約4個月約時間，完成蒐集全雲林70萬張相片、8萬公頃(約等於2.5個台北市面積)農地作物調查資訊。</p>
-                      <p>蒐集全台超過3000台裝置PM2.5數據，結合風場、污染源等分析，以網頁動態展示三日內任一時間共約430萬筆感測資料。</p>
+                      <p>22個中大型以上之專案(含網站、APP)，專案領域含跨農業、環境、生態、核能、樂齡生活等，重點如下：</p>
+                      <p>Project1：以手機GPS與相機功能，約100位工作人員參與，耗費約4個月約時間，完成蒐集全雲林70萬張相片、8萬公頃(約等於2.5個台北市面積)農地作物調查資訊。</p>
+                      <p>Project2：蒐集全台超過3000台裝置PM2.5數據，結合風場、污染源等分析，以網頁動態展示三日內任一時間共約430萬筆感測資料。</p>
                     </div>
                   </div>
                   <div class="cd-timeline-block">
