--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                       <b>July 2014 - January 2019</b>
                       <h2>宸訊科技股份有限公司</h2>
                       <div class="timeline-content-info"></div>
-                      <p>22個中大型以上之專案(含網站、APP)，專案領域含跨農業、環境、生態、核能、樂齡生活等，重點如下：</p>
+                      <p>完成22個中大型以上之專案(含網站、APP)，專案領域含跨農業、環境、生態、核能、樂齡生活等，重點如下：</p>
                       <p>Project1：以手機GPS與相機功能，約100位工作人員參與，耗費約4個月約時間，完成蒐集全雲林70萬張相片、8萬公頃(約等於2.5個台北市面積)農地作物調查資訊。</p>
                       <p>Project2：蒐集全台超過3000台裝置PM2.5數據，結合風場、污染源等分析，以網頁動態展示三日內任一時間共約430萬筆感測資料。</p>
                     </div>
