--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta http-equiv="Content-Language" content="en" />
-    <meta name="msapplication-TileColor" content="#2d89ef">
-    <meta name="theme-color" content="#4188c9">
+    <meta http-equiv="Content-Language" content="zh-tw" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
@@ -81,7 +79,7 @@
             <div class="row">
               <div class="col-lg-4">
                 <div class="card card-profile">
-                  <div class="card-header" style="background-image: url(./assets/images/CV/IMG_3.JPG);"></div>
+                  <div class="card-header" style="background-image: url(./assets/images/Resume/IMG_3.JPG);"></div>
                   <div class="card-body text-center">
                     <!-- <img class="card-profile-img" src="demo/faces/male/16.jpg"> -->
                     <p class="mb-3">Learning Become a iOS Developer</p>
@@ -173,7 +171,7 @@
                         <tbody>
                           <tr>
                             <td class="text-center">
-                              <img src="./assets/images/CV/ArcGIS.png" style="width:40px;">
+                              <img src="./assets/images/Resume/ArcGIS.png" style="width:40px;">
                             </td>
                             <td>
                               <div>Esri ArcGIS/QGIS</div>
@@ -194,7 +192,7 @@
                           </tr>
                           <tr>
                             <td class="text-center">
-                              <img src="./assets/images/CV/ai.png" style="width: 40px;">
+                              <img src="./assets/images/Resume/ai.png" style="width: 40px;">
                             </td>
                             <td>
                               <div>Illustrator</div>
@@ -215,7 +213,7 @@
                           </tr>
                           <tr>
                             <td class="text-center">
-                              <img src="./assets/images/CV/Balsamiq.png" style="width: 40px;">
+                              <img src="./assets/images/Resume/Balsamiq.png" style="width: 40px;">
                             </td>
                             <td>
                               <div>Balsamiq</div>
@@ -236,7 +234,7 @@
                           </tr>
                           <tr>
                             <td class="text-center">
-                              <img src="./assets/images/CV/Sublime.png" style="width: 40px;">
+                              <img src="./assets/images/Resume/Sublime.png" style="width: 40px;">
                             </td>
                             <td>
                               <div>Sublime</div>
@@ -309,7 +307,7 @@
                       <h2>宸訊科技股份有限公司</h2>
                       <div class="timeline-content-info"></div>
                       <p>完成22個中大型以上之專案(含網站、APP)，專案領域含跨農業、環境、生態、核能、樂齡生活等，重點如下：</p>
-                      <p>Project1：以手機GPS與相機功能，約100位工作人員參與，耗費約4個月約時間，完成蒐集全雲林70萬張相片、8萬公頃(約等於2.5個台北市面積)農地作物調查資訊。</p>
+                      <p>Project1：結合手機GPS與相機功能，耗費約4個月約時間，約100位工作人員參與，完成蒐集全雲林70萬張相片、8萬公頃(約等於2.5個台北市面積)農地作物調查資訊。</p>
                       <p>Project2：蒐集全台超過3000台裝置PM2.5數據，結合風場、污染源等分析，以網頁動態展示三日內任一時間共約430萬筆感測資料。</p>
                     </div>
                   </div>
