--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon"/>
-    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
+    <link href="./assets/images/favicon.png" rel="icon" type="image/png">
     <!-- Generated: 2019-04-04 16:55:45 +0200 -->
     <title>Pony Chang Resume</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -117,25 +116,25 @@
                     <div class="row">
                       <div class="col-md-3 title">
                         <h5>C/C++</h5>
-                        <div class="mx-auto chart-circle chart-circle-md" data-value="0.65" data-thickness="10" data-color="cyan">
+                        <div class="mx-auto chart-circle chart-circle-md" data-value="0.65" data-thickness="7" data-color="indigo">
                           <div class="chart-circle-value">65%</div>
                         </div>
                       </div>
                       <div class="col-md-3 title">
                         <h5>HTML/CSS/JS</h5>
-                        <div class="mx-auto chart-circle chart-circle-md" data-value="0.85" data-thickness="10" data-color="cyan">
+                        <div class="mx-auto chart-circle chart-circle-md" data-value="0.85" data-thickness="7" data-color="indigo">
                           <div class="chart-circle-value">85%</div>
                         </div>
                       </div>
                       <div class="col-md-3 title">
                         <h5>SQL</h5>
-                        <div class="mx-auto chart-circle chart-circle-md" data-value="0.75" data-thickness="10" data-color="cyan">
+                        <div class="mx-auto chart-circle chart-circle-md" data-value="0.75" data-thickness="7" data-color="indigo">
                           <div class="chart-circle-value">75%</div>
                         </div>
                       </div>              
                       <div class="col-md-3 title">
                         <h5>Swift</h5>
-                        <div class="mx-auto chart-circle chart-circle-md" data-value="0.70" data-thickness="10" data-color="cyan">
+                        <div class="mx-auto chart-circle chart-circle-md" data-value="0.70" data-thickness="7" data-color="indigo">
                           <div class="chart-circle-value">70%</div>
                         </div>
                       </div>
@@ -348,7 +347,7 @@
         <div class="container">
           <div class="row align-items-center" style="text-align: right;">
             <div style="padding:50px 0px;margin: auto;">
-              <h3 style="font-weight: bolder;color: #467fcf;">"Venture outside your comfort zone. The rewards are worth it."</h3>
+              <h3 style="font-weight: bolder;color: #6574cd;">"Venture outside your comfort zone. The rewards are worth it."</h3>
               <small class="text-muted"> - Rapunzel, Tangled</small>
             </div>
           </div>
