--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
     <link href="./assets/css/vertical-timeline.css" rel="stylesheet" />
     <!-- animate.css -->
     <link href="./assets/css/animate.css" rel="stylesheet" />
-
   </head>
   <body>
     <div class="page">
@@ -38,7 +37,7 @@
         <div class="header">
           <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="./index.html" style="font-family: Lobster;font-size:1.5em;">Resume</a>
+                <a class="navbar-brand" href="./index.html" style="font-family: Lobster;font-size:1.5em;"><img src="./assets/images/favicon.png" class="header-brand-img" alt="tabler logo">Resume</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
