--- a/blog.html
+++ b/blog.html
@@ -54,10 +54,9 @@
         </div>
         <div class="my-3 my-md-5">
           <div class="container">
-            <div class="page-header">
-              <h1 class="page-title">
-                Experience
-              </h1>
+            <div class="headingSide">
+              <h4 class="timelineTitle text-uppercase"><b>Project Experience</b></h4>
+              <p class="titleDesc">工作期間完成22個中大型以上之專案(包含網站、iOS/Android APP)，專案領域含跨農業、環境、生態、核能、樂齡生活等。</p>
             </div>
             <div class="row row-cards row-deck">
               <div class="col-md-6">
