--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               <div class="col-lg-12">
                 <div class="heading">
                   <h4 class="timelineTitle text-uppercase"><b>Programming Experience</b></h4>
-                  <p class="titleDesc">大學期間修習外系C/C++程式語言課程，並於就業後因工作需求，學習HTML/CSS/JS，工作期間因資料分析，自學SQL語法，並於今年轉職，學習Swift課程。</p>
+                  <p class="titleDesc">大學期間修習外系C/C++程式語言課程，並於就業後因工作需求，學習HTML/CSS/JS，工作期間因資料分析，自學SQL語法，並於今年轉職，學習Swift相關課程。</p>
                 </div>
                 <div class="card">
                   <div class="card-body">
@@ -151,7 +151,7 @@
               <div class="col-md-4">
                 <div class="headingSide">
                   <h4 class="timelineTitle text-uppercase"><b>Application Software</b></h4>
-                  <p class="titleDesc">大學期間學習空間分析ArcGIS/QGIS軟體，並因課程地圖繪圖需求，學習Illustrator，工作後使用Balsamiq作為Wireframe內部討論軟體。</p>
+                  <p class="titleDesc">大學期間學習空間分析ArcGIS/QGIS軟體，常用於拓撲/近鄰/環域等分析；並因課程地圖繪圖需求，學習Illustrator；工作後使用Balsamiq作為Wireframe內部討論軟體；為測試Web/APP後端API，使用Postman測試。</p>
                 </div>
               </div>
               <div class="col-md-8">
@@ -184,7 +184,7 @@
                                 </div>
                               </div>
                               <div class="progress progress-xs">
-                                <div class="progress-bar bg-indigo" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar bg-indigo" role="progressbar" style="width: 95%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
                               </div>
                             </td>
                           </tr>
@@ -205,7 +205,28 @@
                                 </div>
                               </div>
                               <div class="progress progress-xs">
-                                <div class="progress-bar bg-indigo" role="progressbar" style="width: 90%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar bg-indigo" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                              </div>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td class="text-center">
+                              <img src="./assets/images/Resume/Postman.png" style="width: 40px;">
+                            </td>
+                            <td>
+                              <div>Postman</div>
+                            </td>
+                            <td>
+                              <div class="clearfix">
+                                <div class="float-left">
+                                  <strong>85%</strong>
+                                </div>
+                                <div class="float-right">
+                                  <!-- <small class="text-muted">Jun 11, 2015 - Present</small> -->
+                                </div>
+                              </div>
+                              <div class="progress progress-xs">
+                                <div class="progress-bar bg-indigo" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                               </div>
                             </td>
                           </tr>
@@ -219,14 +240,14 @@
                             <td>
                               <div class="clearfix">
                                 <div class="float-left">
-                                  <strong>85%</strong>
+                                  <strong>90%</strong>
                                 </div>
                                 <div class="float-right">
                                   <!-- <small class="text-muted">Jun 11, 2015 - Present</small> -->
                                 </div>
                               </div>
                               <div class="progress progress-xs">
-                                <div class="progress-bar bg-indigo" role="progressbar" style="width: 90%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar bg-indigo" role="progressbar" style="width: 95%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
                               </div>
                             </td>
                           </tr>
@@ -247,7 +268,7 @@
                                 </div>
                               </div>
                               <div class="progress progress-xs">
-                                <div class="progress-bar bg-indigo" role="progressbar" style="width: 90%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar bg-indigo" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                               </div>
                             </td>
                           </tr>
@@ -355,10 +376,24 @@
       <footer class="footer" style="background-color: #393e46;">
         <div class="container">
           <div class="row align-items-center flex-row-reverse">
+            <div class="col-auto ml-lg-auto">
+              <div class="row align-items-center">
+                <div class="col-auto">
+                  <ul class="list-inline list-inline-dots mb-0">
+                    <li class="list-inline-item"><a href="mailto:j620178@gmail.com">E-Mail：j620178@gmail.com</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
             <div class="col-12 col-lg-auto mt-3 mt-lg-0 text-center">
               ©2019 Designed & Coded by<a href="."> Pony Chang</a>. SourceCode by <a href="https://github.com/tabler/tabler" target="_blank">Tabler</a>
             </div>
           </div>
+<!--           <div class="row align-items-center flex-row-reverse">
+            <div class="col-12 col-lg-auto mt-3 mt-lg-0 text-center">
+              ©2019 Designed & Coded by<a href="."> Pony Chang</a>. SourceCode by <a href="https://github.com/tabler/tabler" target="_blank">Tabler</a>
+            </div>
+          </div> -->
         </div>
       </footer>
     </div>
