--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
                             <a href="./index.html" class="nav-link"><i class="fe fe-user"></i>&nbsp&nbspAbout&nbspMe</a>
                         </li>
                         <li class="nav-item">
-                            <a href="./blog.html" class="nav-link active"><i class="fe fe-book-open"></i>&nbsp&nbspPortfolio</a>
+                            <a href="./portfolio.html" class="nav-link active"><i class="fe fe-book-open"></i>&nbsp&nbspPortfolio</a>
                         </li>
                     </ul>
                 </div>
